# Fixed/Checked XSS safety of textarea field adding extra configuration to the field, also some extra configuration in description field

--- a/admin/models/forms/type.xml
+++ b/admin/models/forms/type.xml
@@ -129,8 +129,8 @@
 			<field name="" type="separator" default="FLEXI_EDITING_PARAMETERS" level="level2"  />
 			<field name="maintext_hide_html" type="radio" default="" label="FLEXI_HIDE_HTML" description="FLEXI_HIDE_HTML_DESC" class="btn-group btn-group-yesno">
 				<option value="">FLEXI_USE_GLOBAL</option>
-				<option value="0">FLEXI_NO</option>
-				<option value="1">FLEXI_YES</option>
+				<option value="0">FLEXI_HTML_EDITOR</option>
+				<option value="1">FLEXI_SIMPLE_TEXTAREA</option>
 			</field>
 			<field name="maintext_height" type="text" default="400" size="2" label="FLEXI_FIELD_HEIGHT" description="FLEXI_FIELD_HEIGHT_DESC" />
 			
