--- a/site/assets/css/flexi_shared.css
+++ b/site/assets/css/flexi_shared.css
@@ -782,9 +782,9 @@ ul.fcimport_field_value_list li { margin-bottom:0em; }
 	margin:0px!important;
 	padding:0px!important;
 }
-#flexicontent .fcfield-sortables li { margin:0px 0px 4px 0px; padding:0px;  }
-#flexicontent .fcfield-sortables li .input-append,
-#flexicontent .fcfield-sortables li .input-prepend { float:left; }
+#flexicontent .fcfield-sortables > li { margin:0px 0px 4px 0px; padding:0px; }
+#flexicontent .fcfield-sortables > li .input-append,
+#flexicontent .fcfield-sortables > li .input-prepend { float:left; }
 
 /* buttons in forms, special class for add button */
 #flexicontent .fcfield-button,
